# rules_go_appengine

./: BUILD.bazel  README.md  WORKSPACE  defs.bzl
appengine/: BUILD.bazel  gcloudignore.template  go_appengine.bzl  go_appengine_deploy.sh.template  go_appengine_tar.sh.template  sdk.bzl
